--- a/CSS/kontakt.css
+++ b/CSS/kontakt.css
@@ -9,7 +9,7 @@ body {
     height: auto;
 }
 
-main {
+.main {
     width: 80%;
 }
 
@@ -49,7 +49,7 @@ main {
     color: white;
     text-align: center;
     width: 45%;
-    min-width: 200px;
+    min-width: 250px;
 }
 
 .kontaktFormularContainer {
@@ -84,7 +84,7 @@ main {
     width: 90%;
     border: none;
     font-family: "amiko", sans-serif;
-    font-size: 20px;
+    font-size: 22px;
     height: 400px;
     color: #b34641;
     margin-bottom: 5px;
@@ -94,7 +94,7 @@ main {
     width: 90%;
     border: none;
     font-family: "amiko", sans-serif;
-    font-size: 20px;
+    font-size: 22px;
     border-bottom: #b34641 solid 2px;
     color: #b34641;
     margin-bottom: 5px;
@@ -104,7 +104,7 @@ main {
     width: 90%;
     border: none;
     font-family: "amiko", sans-serif;
-    font-size: 20px;
+    font-size: 22px;
     border-bottom: #b34641 solid 2px;
     color: #b34641;
     margin-bottom: 5px;
@@ -128,7 +128,7 @@ main {
 
 @media screen and (max-width: 820px) {
 
-    main {
+    .main {
         width: 80%;
     }
     .kontaktUeberschriftContainer {
@@ -142,7 +142,7 @@ main {
 
 @media screen and (max-width:450px) {
 
-    main {
+    .main {
         width: 90%;
     }
     .kontaktUeberschriftContainer {
@@ -152,4 +152,9 @@ main {
         width: 100%;
     }
 
+.kontaktFormular {
+    width: 80%;
+margin: 0px;
+
+}
 }
