--- a/CSS/main.css
+++ b/CSS/main.css
@@ -7,7 +7,7 @@ body {
     align-items: center;
     margin: 0px;
 }
-main {
+.main {
     display: flex;
     flex-direction: column;
     width: 60%;
@@ -29,6 +29,8 @@ margin: 0;
 a {
     text-decoration: none;
     color: black;
+    font-size: 22px;
+    font-family: "amiko", sans-serif;
 }
 
 
@@ -64,7 +66,7 @@ h3 {
     color: #b34641;
     font-family: "input-serif", serif;
     font-weight: 400;
-    font-size: 66px;
+    font-size: 60px;
     text-align: center;
     margin-left: 0;
     margin-right: 0;
@@ -73,7 +75,7 @@ h3 {
 p {
     font-family: "amiko", sans-serif;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 22px;
 }
 
 #impressum {
@@ -132,9 +134,7 @@ header {
     color: rgb(0, 0, 0);
     text-align: center;
     line-height: 3.5;
-    font-size: 22px;
     margin: 10px;
-    font-family: "amiko", sans-serif;
     width: 175px;
     height: 75px;
     border-radius: 40px;
@@ -158,7 +158,6 @@ min-width: 175px;
 footer {
     width: 100%;
     background-color: #DFD0AF;
-    font-family: "amiko", sans-serif;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr 2fr 1fr 2fr 1fr 1fr 1fr;
     padding-top: 30px;
@@ -171,7 +170,6 @@ footer {
     justify-content: flex-start;
     align-items: flex-start;
     flex-direction: column;
-    font-size: 20px;
     margin-top: 0px;
     width: 100%;
 }
@@ -212,15 +210,11 @@ footer {
 }
 
 .footerTitel {
-    font-size: 22px;
-    font-family: "amiko", sans-serif;
     color: #bf3a3b;
     margin: 0px;
 }
 
 .footerText {
-    font-size: 22px;
-    font-family: "amiko", sans-serif;
     margin: 0px;
 }
 
@@ -242,7 +236,7 @@ footer {
         font-size: 40px;
     }
 
-main {width: 80%;}
+.main {width: 80%;}
 
     .menu-container {
         flex-wrap: wrap;}
@@ -259,7 +253,7 @@ main {width: 80%;}
 
 @media screen and (max-width:450px) {
 
-    main {
+    .main {
         width: 90%;
     }
 
@@ -276,6 +270,7 @@ footer{
     grid-row-start: 2;
     grid-row-end: 3;
     padding: 10px;
+    width: calc(100% - 20px);
 }
 
 #footerColumn2 {
@@ -283,6 +278,7 @@ footer{
     grid-row-start: 4;
     grid-row-end: 5;
     padding: 10px;
+    width: calc(100% - 20px);
 }
 
 #footerColumn3 {
@@ -290,6 +286,7 @@ footer{
     grid-row-start: 6;
     grid-row-end: 7;
     padding: 10px;
+    width: calc(100% - 20px);
 }
 
 #footerColumn4 {
@@ -297,12 +294,14 @@ footer{
     grid-row-start: 8;
     grid-row-end: 9;
     padding: 10px;
+    width: calc(100% - 20px);
 }
 .footerSoMeContainer {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
     align-items: center;
+    width: calc(100% - 20px);
 }
 
 h3 {
