--- a/CSS/ueberuns.css
+++ b/CSS/ueberuns.css
@@ -17,11 +17,10 @@ body {
     background-image: url("../Images/Angebot_Background.svg");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: start;
     margin: 0;
 }
 
-main {
+.main {
     min-width: 650px;
 }
 
@@ -112,7 +111,6 @@ main {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
     border-radius: 50%;
     width: 80%;
     max-width: 100%;
@@ -132,7 +130,7 @@ main {
 
 .portraitFunction {
     font-size: 0.8em;
-    font-weight: bold;
+    font-weight: 600;
 }
 
 .portraitDescription {
@@ -165,14 +163,10 @@ main {
     height: 100px;
 }
 
-.visionBox {
+.vision {
     display: flex;
     flex-direction: column;
     text-align: right;
-
-}
-
-.vision {
     align-self: flex-end;
     width: 50%;
     min-width: 200px;
@@ -185,22 +179,17 @@ main {
     width: 100%;
 }
 
-.kontaktTextBox {
+.kontaktText {
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 60%;
     text-align: left;
     align-self: flex-start;
 }
 
-.kontaktText {
-    width: 70%;
-}
+
 
 .paragraphKontaktText {
-    font: amiko;
-    font-size: 22px;
-    font-weight: 400;
     color: black;
     text-align: start;
 }
@@ -235,8 +224,12 @@ main {
         min-width: 300px;
     }
 
-    main {
+    .main {
         min-width: 0px;
+    }
+
+    .vision {
+        width: 60%;
     }
 }
 
@@ -255,7 +248,26 @@ main {
         width: 80%;
     }
 
-    main {
-        min-width: 0px;
+
+
+    .salutBoxLinks {
+        width: 100%;
+        margin: 0px;
     }
+
+    .salutBoxRechts {
+        width: 100%;
+        margin: 0px;   }
+
+        .vision{
+            width: 100%;
+        }
+.kontaktText{
+    width: 100%;
+}
+
+.adressBox{
+    width: 100%;
+}
+ 
 }
