--- a/CSS/home.css
+++ b/CSS/home.css
@@ -5,6 +5,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
 
+
 }
 
 #headerUnterschrift {
@@ -134,6 +135,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: flex-start;
 }
 
 .userRezension {
@@ -142,6 +144,7 @@ body {
     align-items: center;
     margin-left: 30px;
     margin-right: 30px;
+    align-self: flex-start;
 }
 
 
@@ -172,6 +175,12 @@ body {
     #rezensionTobias {
         display: none;
     }
+
+    body {background-position-y: 18cm;
+        background-position-x: 0cm;
+        background-color: #FFF3D9;
+    
+}
 
 }
 
@@ -232,4 +241,9 @@ body {
          .eventMonat {
              font-size: 50px;
          }
+         body {background-position-y: 25cm;
+            background-position-x: 0cm;
+            background-color: #FFF3D9;
+        
+   }
 }
