--- a/CSS/kontakt.css
+++ b/CSS/kontakt.css
@@ -1,6 +1,5 @@
 body {
-    background-image: url("../Images/Kontakt_Background.svg");
-    background-repeat: no-repeat;
+    background-color: #FFF3D9;
     background-size: cover;
 }
 
@@ -126,6 +125,22 @@ body {
     border: none;
 }
 
+.boxKarte   {
+align-self: flex-start;
+margin-left: 16%;
+margin-top: -70px;
+border-radius: 20px;
+
+}
+
+.textKarte {
+    color: black;
+    font-family: "amiko", sans-serif;
+    font-size: 22px;
+    text-align: left;
+    margin-top: 0;
+margin-bottom: 0;}
+
 @media screen and (max-width: 820px) {
 
     .main {
@@ -155,6 +170,9 @@ body {
 .kontaktFormular {
     width: 80%;
 margin: 0px;
+}
+.boxKarte{
+margin-top: -25px;
 
 }
 }
