--- a/CSS/angebot.css
+++ b/CSS/angebot.css
@@ -15,7 +15,6 @@ body {
     justify-content: center;
 }
 
-
 .datumswahl {
     display: flex;
     flex-direction: row;
@@ -124,7 +123,8 @@ body {
     text-align: center;
 }
 
-#anmelden {    background-color: #FFF3D9;
+#anmelden {
+    background-color: #FFF3D9;
     color: black;
     text-align: center;
     border-radius: 15px;
@@ -144,7 +144,6 @@ body {
     width: 50%;
     margin: 10px 20px 10px 20px;
 }
-
 
 .sectionBeschreibung {
     display: flex;
@@ -209,7 +208,7 @@ body {
     font-size: 30px;
     grid-column: 1 / 4;
     padding-right: 20px;
-    margin:10px 0px 10px 0px;
+    margin: 10px 0px 10px 0px;
 }
 
 #zumKalender {
@@ -225,10 +224,8 @@ body {
     grid-column: 5 / 9;
     padding: 0px;
     padding-left: 20px;
-    margin:10px 0px 10px 0px;
+    margin: 10px 0px 10px 0px;
 }
-
-
 
 #weird {
     text-align: center;
@@ -258,17 +255,14 @@ body {
     margin-top: 200px;
 }
 
-
 .center {
     text-align: center;
 }
-
 
 @media screen and (max-width: 850px) {
     .main {
         width: 90%;
     }
-
 }
 
 @media screen and (max-width: 480px) {
@@ -281,9 +275,14 @@ body {
         flex-wrap: wrap;
     }
 
-.mapKalender {flex-direction: column;}
- 
-.eventKarte {width: calc(100% - 20px); margin: 10px;}
+    .mapKalender {
+        flex-direction: column;
+    }
+
+    .eventKarte {
+        width: calc(100% - 20px);
+        margin: 10px;
+    }
 
     #zumKalender {
         grid-row: 2;
@@ -298,5 +297,4 @@ body {
     #bock {
         font-size: 22px;
     }
-
 }
