--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,33 +1,35 @@
-@import url('https://fonts.googleapis.com/css2?family=Amiko&display=swap');
-
 body {
     background-image: url("../Images/Home_Background.svg");
     background-repeat: no-repeat;
     background-size: cover;
-
-
 }
 
 #headerUnterschrift {
-  text-align: center;
+    text-align: center;
+    font-weight: bold;
+    width: 50%;
 }
 
 .teaser {
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: row;
     padding: 0px 20px;
     margin-bottom: 200px;
+    margin-top: 150px;
 }
 
 .teaserImageBox {
     width: 40%;
     height: auto;
+    display: flex;
+    align-items: flex-start;
 }
 
 .teaserimage {
     width: 100%;
+    border-radius: 3%;
 }
 
 .teaserBoxRechts {
@@ -35,9 +37,14 @@ body {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
-    margin-left: 30px;
+    margin-left: 130px;
     width: 50%;
+}
 
+.teaserBoxRechts h2,
+.teaserBoxRechts p,
+.teaserBoxRechts a {
+    margin-top: 0;
 }
 
 .teaserBoxLinks {
@@ -45,8 +52,14 @@ body {
     flex-direction: column;
     align-items: flex-end;
     justify-content: flex-end;
-    margin-right: 30px;
+    margin-right: 130px;
     width: 50%;
+}
+
+.teaserBoxLinks h2,
+.teaserBoxLinks p,
+.teaserBoxLinks a {
+    margin-top: 0;
 }
 
 .teaserTextLinks {
@@ -65,16 +78,6 @@ body {
     margin-bottom: 100px;
 }
 
-.event {
-    display: flex;
-    margin: 10px;
-    background-color: #FFFCF5;
-    width: 80%;
-    flex-direction: row;
-    padding: 20px;
-    border-radius: 20px;
-}
-
 .eventliste {
     display: flex;
     justify-content: center;
@@ -84,9 +87,36 @@ body {
     align-items: center;
 }
 
+.event {
+    display: flex;
+    margin: 10px;
+    background-color: #FFFCF5;
+    width: 100%;
+    flex-direction: row;
+    padding: 20px;
+    border-radius: 40px;
+}
+
 .largeimage {
     width: 100%;
+}
 
+#eventGrün {
+    border: #0b6824;
+    border-width: 7px;
+    border-style: solid;
+}
+
+#eventRot {
+    border: #7c2c27;
+    border-width: 7px;
+    border-style: solid;
+}
+
+#eventPink {
+    border: #fa86d9;
+    border-width: 7px;
+    border-style: solid;
 }
 
 .eventDatum {
@@ -113,24 +143,6 @@ body {
     margin-top: 0;
 }
 
-#eventGrün {
-    border: #0b6824;
-    border-width: 5px;
-    border-style: solid;
-}
-
-#eventPink {
-    border: #fa86d9;
-    border-width: 5px;
-    border-style: solid;
-}
-
-#eventRot {
-    border: #7c2c27;
-    border-width: 5px;
-    border-style: solid;
-}
-
 .boxRezensionen {
     display: flex;
     flex-direction: row;
@@ -146,7 +158,6 @@ body {
     margin-right: 30px;
     align-self: flex-start;
 }
-
 
 .portraitRezensionen {
     width: 300px;
@@ -172,21 +183,19 @@ body {
 }
 
 @media screen and (max-width: 850px) {
-    #rezensionTobias {
-        display: none;
+    .boxRezensionen {
+        flex-direction: column;
+        width: auto;
     }
 
-    body {background-position-y: 18cm;
+    body {
+        background-position-y: 18cm;
         background-position-x: 0cm;
         background-color: #FFF3D9;
-    
-}
-
+    }
 }
 
 @media screen and (max-width: 480px) {
-    
-    
     .teaser {
         flex-direction: column;
     }
@@ -227,23 +236,25 @@ body {
 
     .event {
         flex-direction: column;
-        
     }
+
     .eventDatum {
         flex-direction: row;
         justify-content: space-around;
+    }
 
-         }
+    .eventTag {
+        font-size: 50px;
+    }
 
-         .eventTag {
-             font-size: 50px;
-         }
-         .eventMonat {
-             font-size: 50px;
-         }
-         body {background-position-y: 25cm;
-            background-position-x: 0cm;
-            background-color: #FFF3D9;
-        
-   }
+    .eventMonat {
+        font-size: 50px;
+    }
+
+    body {
+        background-position-y: 25cm;
+        background-position-x: 0cm;
+        background-color: #FFF3D9;
+
+    }
 }
