--- a/CSS/impressum.css
+++ b/CSS/impressum.css
@@ -1,4 +1,3 @@
-
 .flexbox {
     display: flex;
     flex-direction: column;
@@ -14,26 +13,27 @@
 
 }
 
-.impressumText { text-align: left;}
+.impressumText {
+    text-align: left;
+}
 
 h1 {
     color: #b34641;
 }
 
 body {
-    background-color:  #FFF3D9;
+    background-color: #FFF3D9;
 }
 
 .pageTitle {
-align-self: flex-start;
+    align-self: flex-start;
 }
 
-
 @media screen and (max-width: 820px) {
-    
-        .impressumContainer {
-            width: 100%;
-        }
+
+    .impressumContainer {
+        width: 100%;
+    }
 }
 
 @media screen and (max-width:480px) {
@@ -42,5 +42,7 @@ align-self: flex-start;
         width: 100%;
     }
 
-    h2{ font-size: 25px;}
+    h2 {
+        font-size: 25px;
+    }
 }
