--- a/CSS/main.css
+++ b/CSS/main.css
@@ -7,6 +7,7 @@ body {
     align-items: center;
     margin: 0px;
 }
+
 .main {
     display: flex;
     flex-direction: column;
@@ -15,7 +16,7 @@ body {
 }
 
 .tabLogo {
-   width: 50%;
+    width: 50%;
 }
 
 section {
@@ -23,7 +24,7 @@ section {
     flex-direction: column;
     width: 100%;
     align-items: center;
-margin: 0;
+    margin: 0;
 }
 
 a {
@@ -32,8 +33,6 @@ a {
     font-size: 22px;
     font-family: "amiko", sans-serif;
 }
-
-
 
 .logoHome {
     width: 80%;
@@ -99,8 +98,6 @@ header {
     width: 100%;
 }
 
-
-
 .headerIcons {
     height: 25px;
 
@@ -126,11 +123,10 @@ header {
     margin-bottom: 10px;
 }
 
-
-
 .button {
     background-color: #DFD0AF;
     color: rgb(0, 0, 0);
+    font-weight: bolder;
     text-align: center;
     line-height: 3.5;
     margin: 10px;
@@ -141,7 +137,6 @@ header {
 
 .button:hover {
     background-color: #bf3a3b;
-
 }
 
 #buttonActive {
@@ -149,10 +144,9 @@ header {
 }
 
 .menu {
-width: 20%;
-min-width: 175px;
+    width: 20%;
+    min-width: 175px;
 }
-
 
 footer {
     width: 100%;
@@ -180,7 +174,6 @@ footer {
     align-items: center;
 }
 
-
 #footerColumn1 {
     grid-column-start: 2;
     grid-column-end: 3;
@@ -200,7 +193,6 @@ footer {
     grid-column-start: 8;
     grid-column-end: 9;
 }
-
 
 .footerSoMe {
     margin-top: 5px;
@@ -231,14 +223,18 @@ footer {
 }
 
 @media screen and (max-width: 820px) {
+    
     h1 {
         font-size: 40px;
     }
 
-.main {width: 80%;}
+    .main {
+        width: 80%;
+    }
 
     .menu-container {
-        flex-wrap: wrap;}
+        flex-wrap: wrap;
+    }
 
     .toolbar {
         width: 100%;
@@ -256,55 +252,57 @@ footer {
         width: 90%;
     }
 
-.menu {
-    min-width: 100px;
-    width: 160px;}
+    .menu {
+        min-width: 100px;
+        width: 160px;
+    }
 
-footer{
-   
-    grid-template-columns: 1fr;}
+    footer {
 
-#footerColumn1 {
-    grid-column: 1;
-    grid-row-start: 2;
-    grid-row-end: 3;
-    padding: 10px;
-    width: calc(100% - 20px);
-}
+        grid-template-columns: 1fr;
+    }
 
-#footerColumn2 {
-    grid-column: 1;
-    grid-row-start: 4;
-    grid-row-end: 5;
-    padding: 10px;
-    width: calc(100% - 20px);
-}
+    #footerColumn1 {
+        grid-column: 1;
+        grid-row-start: 2;
+        grid-row-end: 3;
+        padding: 10px;
+        width: calc(100% - 20px);
+    }
 
-#footerColumn3 {
-    grid-column: 1;
-    grid-row-start: 6;
-    grid-row-end: 7;
-    padding: 10px;
-    width: calc(100% - 20px);
-}
+    #footerColumn2 {
+        grid-column: 1;
+        grid-row-start: 4;
+        grid-row-end: 5;
+        padding: 10px;
+        width: calc(100% - 20px);
+    }
 
-#footerColumn4 {
-    grid-column: 1;
-    grid-row-start: 8;
-    grid-row-end: 9;
-    padding: 10px;
-    width: calc(100% - 20px);
-}
-.footerSoMeContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    width: calc(100% - 20px);
-}
+    #footerColumn3 {
+        grid-column: 1;
+        grid-row-start: 6;
+        grid-row-end: 7;
+        padding: 10px;
+        width: calc(100% - 20px);
+    }
 
-h3 {
-    font-size: 30px;}
+    #footerColumn4 {
+        grid-column: 1;
+        grid-row-start: 8;
+        grid-row-end: 9;
+        padding: 10px;
+        width: calc(100% - 20px);
+    }
 
+    .footerSoMeContainer {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        width: calc(100% - 20px);
+    }
 
+    h3 {
+        font-size: 30px;
+    }
 }
