--- a/CSS/ueberuns.css
+++ b/CSS/ueberuns.css
@@ -1,6 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Amiko&display=swap');
-
-
 body {
     background-image: url("../Images/Home_Background.svg");
     background-size: cover;
@@ -22,6 +19,7 @@ body {
     padding: 0 20px;
 
 }
+
 .teaserBoxLinks {
     display: flex;
     flex-direction: column;
@@ -79,7 +77,6 @@ header {
     margin-top: 50px;
     width: 100%;
 }
-
 
 .menu-container {
     display: flex;
@@ -190,7 +187,6 @@ body {
     opacity: 1;
 }
 
-
 .portraitText {
     color: black;
     position: absolute;
@@ -273,8 +269,6 @@ body {
     align-self: flex-start;
 }
 
-
-
 .paragraphKontaktText {
     color: black;
     text-align: start;
@@ -292,7 +286,6 @@ body {
     margin: 0px;
     padding: 0px;
 }
-
 
 @media screen and (max-width:820px) {
 
@@ -320,6 +313,7 @@ body {
 }
 
 @media screen and (max-width:480px) {
+    
     .textTeam {
         align-self: flex-start;
         padding-left: 0px;
@@ -334,8 +328,6 @@ body {
         width: 80%;
     }
 
-
-
     .salutBoxLinks {
         width: 100%;
         margin: 0px;
@@ -343,17 +335,18 @@ body {
 
     .salutBoxRechts {
         width: 100%;
-        margin: 0px;   }
+        margin: 0px;
+    }
 
-        .vision{
-            width: 100%;
-        }
-.kontaktText{
-    width: 100%;
-}
+    .vision {
+        width: 100%;
+    }
 
-.adressBox{
-    width: 100%;
-}
- 
+    .kontaktText {
+        width: 100%;
+    }
+
+    .adressBox {
+        width: 100%;
+    }
 }
