--- a/CSS/home.css
+++ b/CSS/home.css
@@ -4,6 +4,17 @@ body {
     background-size: cover;
 }
 
+.logoHome {
+    width: 80%;
+    max-width: 450px;
+    margin-top: 10px;
+}
+
+#claim {
+    font-size: 31px;
+    font-weight: 200;
+}
+
 #headerUnterschrift {
     text-align: center;
     font-weight: bold;
@@ -16,8 +27,8 @@ body {
     align-items: flex-start;
     flex-direction: row;
     padding: 0px 20px;
-    margin-bottom: 200px;
-    margin-top: 150px;
+    margin-bottom: 135px;
+    margin-top: 135px;
 }
 
 .teaserImageBox {
@@ -25,6 +36,7 @@ body {
     height: auto;
     display: flex;
     align-items: flex-start;
+    margin-top: 6px;
 }
 
 .teaserimage {
@@ -70,26 +82,26 @@ body {
     text-align: left;
 }
 
+#buttonAligned {
+    margin: 0px;
+}
+
 #spass {
     align-self: flex-end;
     width: 100%;
     text-align: right;
-    margin-top: 0px;
-    margin-bottom: 100px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 .eventliste {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 20px;
-    margin-bottom: 200px;
-    align-items: center;
+    width: 90%;
+    margin-bottom: 180px;
 }
 
 .event {
     display: flex;
-    margin: 10px;
+    margin: 10px 0;
     background-color: #FFFCF5;
     width: 100%;
     flex-direction: row;
@@ -183,9 +195,22 @@ body {
 }
 
 @media screen and (max-width: 850px) {
+
+    .teaserBoxRechts {
+        margin-left: 60px;
+    }
+
+    .teaserBoxLinks {
+        margin-right: 60px;
+    }
+
     .boxRezensionen {
         flex-direction: column;
         width: auto;
+    }
+
+    .userRezension {
+        margin: 40px;
     }
 
     body {
@@ -196,6 +221,7 @@ body {
 }
 
 @media screen and (max-width: 480px) {
+
     .teaser {
         flex-direction: column;
     }
@@ -216,12 +242,9 @@ body {
         width: 100%;
     }
 
-    .userRezension {
-        margin-bottom: 100px;
-    }
-
     .teaserImageBox {
         width: 100%;
+        margin-bottom: 15px;
     }
 
     .teaserBoxLinks {
@@ -236,6 +259,7 @@ body {
 
     .event {
         flex-direction: column;
+        box-sizing: border-box;
     }
 
     .eventDatum {
@@ -255,6 +279,5 @@ body {
         background-position-y: 25cm;
         background-position-x: 0cm;
         background-color: #FFF3D9;
-
     }
 }
