--- a/CSS/impressum.css
+++ b/CSS/impressum.css
@@ -1,16 +1,19 @@
+body {
+    background-color: #FFF3D9;
+}
+
 .flexbox {
     display: flex;
     flex-direction: column;
     align-content: flex-start;
-    width: 80%;
-    margin-bottom: 50px;
+    width: 60%;
+    margin-bottom: 50px; 
 }
 
 .impressumContainer {
     display: flex;
     width: 70%;
     align-items: flex-start;
-
 }
 
 .impressumText {
@@ -21,12 +24,25 @@ h1 {
     color: #b34641;
 }
 
-body {
-    background-color: #FFF3D9;
-}
-
 .pageTitle {
     align-self: flex-start;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
+}
+
+#logoImpressum {
+    width: 200px;
+    height: 200px;
+    margin-top: 80px;
+}
+
+.button {
+    margin-top: 150px;
 }
 
 @media screen and (max-width: 820px) {
