--- a/CSS/kontakt.css
+++ b/CSS/kontakt.css
@@ -6,6 +6,23 @@ body {
 .bildKontakt {
     width: 100%;
     height: auto;
+    margin-top: 50px;
+}
+
+.boxKarte {
+    align-self: flex-start;
+    margin-left: 16%;
+    margin-top: -70px;
+    border-radius: 20px;
+}
+
+.textKarte {
+    color: black;
+    font-family: "amiko", sans-serif;
+    font-size: 22px;
+    text-align: left;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .main {
@@ -40,8 +57,6 @@ body {
 
 .kontaktDaten {
     background-color: #e37e41;
-    padding-left: 10px;
-    padding-left: 10px;
     margin: 10px;
     border-radius: 100px;
     font-family: "amiko", sans-serif;
@@ -49,6 +64,8 @@ body {
     text-align: center;
     width: 45%;
     min-width: 250px;
+    height: 35px;
+    line-height: 37px;
 }
 
 .kontaktFormularContainer {
@@ -60,10 +77,10 @@ body {
     width: 60%;
     align-self: flex-end;
     background-color: #dfd0af;
-    border-radius: 20px;
+    border-radius: 40px;
     padding-top: 20px;
     padding-bottom: 20px;
-    margin-bottom: 200px;
+    margin-bottom: 100px;
 }
 
 .kontaktFormular {
@@ -75,7 +92,7 @@ body {
     background-color: white;
     width: 70%;
     padding: 10px;
-    border-radius: 20px;
+    border-radius: 40px;
 }
 
 #nachricht {
@@ -83,9 +100,10 @@ body {
     border: none;
     font-family: "amiko", sans-serif;
     font-size: 22px;
-    height: 400px;
+    height: 380px;
     color: #b34641;
     margin-bottom: 5px;
+    margin-top: 20px;
 }
 
 #name {
@@ -95,7 +113,7 @@ body {
     font-size: 22px;
     border-bottom: #b34641 solid 2px;
     color: #b34641;
-    margin-bottom: 5px;
+    margin-bottom: 20px;
 }
 
 #email {
@@ -105,39 +123,23 @@ body {
     font-size: 22px;
     border-bottom: #b34641 solid 2px;
     color: #b34641;
-    margin-bottom: 5px;
+    margin-bottom: 20px;
 }
 
 #absenden {
     background-color: #e37e41;
-    padding-left: 10px;
-    padding-left: 10px;
-    margin: 10px;
+    margin: 10px 10px 20px 18px;
     border-radius: 100px;
     font-family: "amiko", sans-serif;
     font-size: 20px;
     color: white;
     text-align: center;
-    width: 45%;
+    width: 70%;
     align-self: flex-start;
     box-shadow: none;
-    border: none;
-}
-
-.boxKarte {
-    align-self: flex-start;
-    margin-left: 16%;
-    margin-top: -70px;
-    border-radius: 20px;
-}
-
-.textKarte {
-    color: black;
-    font-family: "amiko", sans-serif;
-    font-size: 22px;
-    text-align: left;
-    margin-top: 0;
-    margin-bottom: 0;
+    border: none;   
+    height: 35px;
+    line-height: 35px;
 }
 
 @media screen and (max-width: 820px) {
