--- a/CSS/impressum.css
+++ b/CSS/impressum.css
@@ -7,7 +7,15 @@ body {
     flex-direction: column;
     align-content: flex-start;
     width: 60%;
-    margin-bottom: 50px; 
+    margin-bottom: 50px;
+}
+
+h1 {
+    color: #b34641;
+}
+
+.pageTitle {
+    align-self: flex-start;
 }
 
 .impressumContainer {
@@ -18,14 +26,6 @@ body {
 
 .impressumText {
     text-align: left;
-}
-
-h1 {
-    color: #b34641;
-}
-
-.pageTitle {
-    align-self: flex-start;
 }
 
 .main {
@@ -41,11 +41,16 @@ h1 {
     margin-top: 80px;
 }
 
-.button {
+#buttonHome {
     margin-top: 150px;
 }
 
+
 @media screen and (max-width: 820px) {
+
+    .flexbox {
+        width: 80%;
+    }
 
     .impressumContainer {
         width: 100%;
@@ -54,11 +59,11 @@ h1 {
 
 @media screen and (max-width:480px) {
 
-    .impressumContainer {
-        width: 100%;
-    }
-
     h2 {
         font-size: 25px;
+    }
+
+    p {
+        font-size: 16px;
     }
 }
