--- a/CSS/home.css
+++ b/CSS/home.css
@@ -18,7 +18,6 @@ body {
 #headerUnterschrift {
     text-align: center;
     font-weight: bold;
-    width: 50%;
 }
 
 .teaser {
@@ -82,7 +81,7 @@ body {
     text-align: left;
 }
 
-#buttonAligned {
+.buttonAligned {
     margin: 0px;
 }
 
@@ -137,6 +136,11 @@ body {
     font-family: "input-serif", serif;
     margin-top: 0;
     margin-left: 50px;
+    text-wrap: wrap;
+}
+
+#festivalMobile {
+    display: none;
 }
 
 .eventText {
@@ -293,5 +297,12 @@ body {
 
     .eventMonat {
         font-size: 50px;
+    }
+
+    #festivalMobile {
+        display: block;
+    }
+    #festivalDesktop {
+        display: none;
     }
 }
